# HDC-Plus

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/002-hdc-plus/: spec.md  tasks.md
specs/002-hdc-plus/checklists/: requirements.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: device.rs  hap.rs  mod.rs
src-tauri/src/hdc/: client.rs
src-tauri/src/models/: device.rs  hap.rs
src/components/: ConnectDialog.vue  DeviceCard.vue  DeviceDetail.vue  DeviceList.vue  HapInstallPanel.vue
src/stores/: device.ts  hap.ts
src/types/: device.ts  hap.ts
src/utils/: hap.ts  tauri.ts
