[package]
name = "hdc-plus"
version = "0.1.0"
edition = "2021"

[lib]
name = "hdc_plus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[package.metadata]
icons = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
